src/main/java/org/example/ObjectOrientedParser.java
// Generated from /home/rafas/IdeaProjects/compilerJava/src/main/java/org/example/ObjectOrientedParser.g4 by ANTLR 4.13.2
package org.example;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ObjectOrientedParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, INTERFACE=2, ENUM=3, EXTENDS=4, IMPLEMENTS=5, PUBLIC=6, PRIVATE=7, 
		PROTECTED=8, STATIC=9, FINAL=10, ABSTRACT=11, NATIVE=12, SYNCHRONIZED=13, 
		TRANSIENT=14, VOLATILE=15, VOID=16, BOOLEAN=17, BYTE=18, CHAR=19, SHORT=20, 
		INT=21, LONG=22, FLOAT=23, DOUBLE=24, STRING_TYPE=25, IF=26, ELSE=27, 
		WHILE=28, FOR=29, DO=30, SWITCH=31, CASE=32, DEFAULT=33, BREAK=34, CONTINUE=35, 
		RETURN=36, NEW=37, THIS=38, SUPER=39, NULL_LITERAL=40, INSTANCEOF=41, 
		PACKAGE=42, IMPORT=43, THROWS=44, TRY=45, CATCH=46, FINALLY=47, ASSERT=48, 
		BOOLEAN_LITERAL=49, INTEGER_LITERAL=50, FLOAT_LITERAL=51, CHAR_LITERAL=52, 
		STRING_LITERAL=53, IDENTIFIER=54, LPAREN=55, RPAREN=56, LBRACE=57, RBRACE=58, 
		LBRACK=59, RBRACK=60, SEMI=61, COMMA=62, DOT=63, ELLIPSIS=64, AT=65, COLONCOLON=66, 
		ASSIGN=67, GT=68, LT=69, BANG=70, TILDE=71, QUESTION=72, COLON=73, EQUAL=74, 
		LE=75, GE=76, NOTEQUAL=77, AND=78, OR=79, INC=80, DEC=81, ADD=82, SUB=83, 
		MUL=84, DIV=85, BITAND=86, BITOR=87, CARET=88, MOD=89, ADD_ASSIGN=90, 
		SUB_ASSIGN=91, MUL_ASSIGN=92, DIV_ASSIGN=93, AND_ASSIGN=94, OR_ASSIGN=95, 
		XOR_ASSIGN=96, MOD_ASSIGN=97, LSHIFT_ASSIGN=98, RSHIFT_ASSIGN=99, URSHIFT_ASSIGN=100, 
		ARROW=101, LINE_COMMENT=102, BLOCK_COMMENT=103, WS=104, VAR=105, THROW=106, 
		LSHIFT=107, RSHIFT=108, URSHIFT=109;
	public static final int
		RULE_compilationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2, 
		RULE_qualifiedName = 3, RULE_typeDeclaration = 4, RULE_classDeclaration = 5, 
		RULE_interfaceDeclaration = 6, RULE_enumDeclaration = 7, RULE_modifier = 8, 
		RULE_typeParameters = 9, RULE_typeParameter = 10, RULE_typeList = 11, 
		RULE_type = 12, RULE_primitiveType = 13, RULE_classOrInterfaceType = 14, 
		RULE_typeArguments = 15, RULE_typeArgument = 16, RULE_classBody = 17, 
		RULE_classBodyDeclaration = 18, RULE_memberDeclaration = 19, RULE_interfaceBody = 20, 
		RULE_interfaceBodyDeclaration = 21, RULE_interfaceMemberDeclaration = 22, 
		RULE_constantDeclaration = 23, RULE_interfaceMethodDeclaration = 24, RULE_enumBody = 25, 
		RULE_enumConstantList = 26, RULE_enumConstant = 27, RULE_enumBodyDeclarations = 28, 
		RULE_fieldDeclaration = 29, RULE_variableDeclaratorList = 30, RULE_variableDeclarator = 31, 
		RULE_variableInitializer = 32, RULE_arrayInitializer = 33, RULE_methodDeclaration = 34, 
		RULE_constructorDeclaration = 35, RULE_typeOrVoid = 36, RULE_formalParameterList = 37, 
		RULE_formalParameter = 38, RULE_lastFormalParameter = 39, RULE_variableDeclaratorId = 40, 
		RULE_qualifiedNameList = 41, RULE_block = 42, RULE_blockStatement = 43, 
		RULE_localVariableDeclarationStatement = 44, RULE_statement = 45, RULE_expressionStatement = 46, 
		RULE_catchClause = 47, RULE_catchType = 48, RULE_finallyBlock = 49, RULE_forControl = 50, 
		RULE_forInit = 51, RULE_enhancedForControl = 52, RULE_forUpdate = 53, 
		RULE_switchBlockStatementGroup = 54, RULE_switchLabel = 55, RULE_constantExpression = 56, 
		RULE_enumConstantName = 57, RULE_primary = 58, RULE_literal = 59, RULE_newExpression = 60, 
		RULE_arguments = 61, RULE_expressionList = 62, RULE_expression = 63, RULE_lambdaExpression = 64, 
		RULE_lambdaParameters = 65, RULE_lambdaBody = 66, RULE_assignmentExpression = 67, 
		RULE_assignmentOperator = 68, RULE_conditionalExpression = 69, RULE_conditionalOrExpression = 70, 
		RULE_conditionalAndExpression = 71, RULE_inclusiveOrExpression = 72, RULE_exclusiveOrExpression = 73, 
		RULE_andExpression = 74, RULE_equalityExpression = 75, RULE_relationalExpression = 76, 
		RULE_shiftExpression = 77, RULE_additiveExpression = 78, RULE_multiplicativeExpression = 79, 
		RULE_unaryExpression = 80, RULE_preIncrementExpression = 81, RULE_preDecrementExpression = 82, 
		RULE_unaryExpressionNotPlusMinus = 83, RULE_postfixExpression = 84, RULE_methodCall = 85, 
		RULE_methodCallTail = 86, RULE_castExpression = 87, RULE_parExpression = 88;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "packageDeclaration", "importDeclaration", "qualifiedName", 
			"typeDeclaration", "classDeclaration", "interfaceDeclaration", "enumDeclaration", 
			"modifier", "typeParameters", "typeParameter", "typeList", "type", "primitiveType", 
			"classOrInterfaceType", "typeArguments", "typeArgument", "classBody", 
			"classBodyDeclaration", "memberDeclaration", "interfaceBody", "interfaceBodyDeclaration", 
			"interfaceMemberDeclaration", "constantDeclaration", "interfaceMethodDeclaration", 
			"enumBody", "enumConstantList", "enumConstant", "enumBodyDeclarations", 
			"fieldDeclaration", "variableDeclaratorList", "variableDeclarator", "variableInitializer", 
			"arrayInitializer", "methodDeclaration", "constructorDeclaration", "typeOrVoid", 
			"formalParameterList", "formalParameter", "lastFormalParameter", "variableDeclaratorId", 
			"qualifiedNameList", "block", "blockStatement", "localVariableDeclarationStatement", 
			"statement", "expressionStatement", "catchClause", "catchType", "finallyBlock", 
			"forControl", "forInit", "enhancedForControl", "forUpdate", "switchBlockStatementGroup", 
			"switchLabel", "constantExpression", "enumConstantName", "primary", "literal", 
			"newExpression", "arguments", "expressionList", "expression", "lambdaExpression", 
			"lambdaParameters", "lambdaBody", "assignmentExpression", "assignmentOperator", 
			"conditionalExpression", "conditionalOrExpression", "conditionalAndExpression", 
			"inclusiveOrExpression", "exclusiveOrExpression", "andExpression", "equalityExpression", 
			"relationalExpression", "shiftExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "preIncrementExpression", "preDecrementExpression", 
			"unaryExpressionNotPlusMinus", "postfixExpression", "methodCall", "methodCallTail", 
			"castExpression", "parExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'interface'", "'enum'", "'extends'", "'implements'", 
			"'public'", "'private'", "'protected'", "'static'", "'final'", "'abstract'", 
			"'native'", "'synchronized'", "'transient'", "'volatile'", "'void'", 
			"'boolean'", "'byte'", "'char'", "'short'", "'int'", "'long'", "'float'", 
			"'double'", "'String'", "'if'", "'else'", "'while'", "'for'", "'do'", 
			"'switch'", "'case'", "'default'", "'break'", "'continue'", "'return'", 
			"'new'", "'this'", "'super'", "'null'", "'instanceof'", "'package'", 
			"'import'", "'throws'", "'try'", "'catch'", "'finally'", "'assert'", 
			null, null, null, null, null, null, "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "';'", "','", "'.'", "'...'", "'@'", "'::'", "'='", "'>'", "'<'", 
			"'!'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", 
			"'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", 
			"'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", 
			"'>>='", "'>>>='", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "INTERFACE", "ENUM", "EXTENDS", "IMPLEMENTS", "PUBLIC", 
			"PRIVATE", "PROTECTED", "STATIC", "FINAL", "ABSTRACT", "NATIVE", "SYNCHRONIZED", 
			"TRANSIENT", "VOLATILE", "VOID", "BOOLEAN", "BYTE", "CHAR", "SHORT", 
			"INT", "LONG", "FLOAT", "DOUBLE", "STRING_TYPE", "IF", "ELSE", "WHILE", 
			"FOR", "DO", "SWITCH", "CASE", "DEFAULT", "BREAK", "CONTINUE", "RETURN", 
			"NEW", "THIS", "SUPER", "NULL_LITERAL", "INSTANCEOF", "PACKAGE", "IMPORT", 
			"THROWS", "TRY", "CATCH", "FINALLY", "ASSERT", "BOOLEAN_LITERAL", "INTEGER_LITERAL", 
			"FLOAT_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", "IDENTIFIER", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", 
			"ELLIPSIS", "AT", "COLONCOLON", "ASSIGN", "GT", "LT", "BANG", "TILDE", 
			"QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", "INC", 
			"DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", "CARET", "MOD", 
			"ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", 
			"OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", 
			"URSHIFT_ASSIGN", "ARROW", "LINE_COMMENT", "BLOCK_COMMENT", "WS", "VAR", 
			"THROW", "LSHIFT", "RSHIFT", "URSHIFT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ObjectOrientedParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ObjectOrientedParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ObjectOrientedParser.EOF, 0); }
		public PackageDeclarationContext packageDeclaration() {
			return getRuleContext(PackageDeclarationContext.class,0);
		}
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjectOrientedParserVisitor ) return ((ObjectOrientedParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(178);
				packageDeclaration();
				}
			}

			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(181);
				importDeclaration();
				}
				}
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 65486L) != 0)) {
				{
				{
				setState(187);
				typeDeclaration();
				}
				}
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(193);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageDeclarationContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(ObjectOrientedParser.PACKAGE, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ObjectOrientedParser.SEMI, 0); }
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).exitPackageDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjectOrientedParserVisitor ) return ((ObjectOrientedParserVisitor<? extends T>)visitor).visitPackageDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			match(PACKAGE);
			setState(196);
			qualifiedName();
			setState(197);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(ObjectOrientedParser.IMPORT, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ObjectOrientedParser.SEMI, 0); }
		public TerminalNode DOT() { return getToken(ObjectOrientedParser.DOT, 0); }
		public TerminalNode MUL() { return getToken(ObjectOrientedParser.MUL, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjectOrientedParserVisitor ) return ((ObjectOrientedParserVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			match(IMPORT);
			setState(200);
			qualifiedName();
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(201);
				match(DOT);
				setState(202);
				match(MUL);
				}
			}

			setState(205);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QualifiedNameContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ObjectOrientedParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ObjectOrientedParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(ObjectOrientedParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(ObjectOrientedParser.DOT, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).enterQualifiedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObjectOrientedParserListener ) ((ObjectOrientedParserListener)listener).exitQualifiedName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjectOrientedParserVisitor ) return ((ObjectOrientedParserVisitor<? extends T>)visitor).visitQualifiedName(this);
			else return visitor.visitChildren(this);
		}
	}
